newitinerary coupon hidded, navigator alignment fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,7 +18,7 @@ body {
   font-family: Lexend;
 }
 .last-navigation-link {
-  margin-left: auto;
+  /* margin-left: auto; */
 }
 .next-link {
   /* color: inherit;
